# cell-life-simulation

./: Cargo.toml
old/: gpu_state.rs  lib.rs  renderer.rs  simulation.rs  texture.rs
shaders/: shader.wgsl
src/: gpu_state.rs  lib.rs  main.rs  renderer.rs  shared.rs  simulation.rs
src/compute/: simulation.rs
src/render/: render.wgsl  renderer.rs  window.rs
src/shared/: shader.rs  sim_params.rs  texture.rs
