[package]
name = "cells"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.71"
bytemuck = { version = "1.13.1", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.28", features = ["full"] }
wgpu = "0.15"
winit = "0.27"
